# smashbit

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  map.glb
assets/shaders/pipeline/: background.wgsl  main.wgsl  texture.wgsl
assets/shaders/uniform/: camera_shader.wgsl  light_shader.wgsl
src/: camera_controller.rs  game.rs  main.rs  physics.rs  renderer.rs  scene.rs
src/renderer/: camera.rs  fog.rs  light.rs  mesh.rs  mod.rs  texture.rs
src/renderer/pipeline/: background.rs  color.rs  hdr.rs  mod.rs  texture.rs
src/renderer/pipeline/shaders/: background.wgsl  fog_shader.wgsl  hdr.wgsl  light_shader.wgsl  main.wgsl  texture.wgsl
src/renderer/uniform/: camera.rs  fog.rs  light.rs  mod.rs
src/shaders/: main.wgsl
