[package]
name = "smashbit"
version = "0.1.0"
edition = "2024"

license = "MIT"

[dependencies]
anyhow = "1.0"
bimap = "0.6"
bytemuck = { version = "1.23", features = ["derive"] }
glam = "0.30"
gltf = "1.4"
image = "0.25"
kira = "0.10"
litemap = "0.8"
log = "0.4"
pollster = "0.4"
rapier3d = "0.26"
simple_logger = "5.0"
wesl = "0.1"
wgpu = "26.0"
winit = "0.30"

[build-dependencies]
wesl = "0.1"

[profile.release]
lto = true
strip = true
